--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,14 +1,15 @@
 /* ヘッダー */
 .header {
-  position: absolute;
-  top: 40px;
-  left: 100px;
+  width: 85%;
+  margin: 0 auto;
+  padding: 1rem 0;
 }
 
 .header__hamburger {
   width: 40px;
   height: 40px;
   cursor: pointer;
+  position: relative;
   transition: 0.4s;
   background-color: #305dff;
   border-radius: 5px;
@@ -38,10 +39,6 @@
 .header__hamburger span:nth-of-type(3) {
   width: 5px;
   top: 27px;
-}
-
-.header__hamburger.active {
-  position: fixed;
 }
 
 .header__hamburger.active span:nth-of-type(1) {
@@ -180,11 +177,7 @@
 
 /* ホーム */
 .search {
-  position: absolute;
-  top: 40px;
-  right: 100px;
   width: 600px;
-  height: 30px;
   padding: 10px 5px;
   background-color: #ffffff;
   border-radius: 5px;
@@ -294,8 +287,7 @@
 
 /* 詳細 */
 .shop-detail {
-  padding: 40px 0 0 100px;
-  width: 45%;
+  width: 50%;
 }
 
 .shop-detail__link {
@@ -323,17 +315,17 @@
 }
 
 .reservation {
-  width: 45%;
-  padding: 40px 100px 0;
+  width: 50%;
 }
 
 .reservation-card {
   background: #305dff;
-  width: 100%;
-  height: 70vh;
   border-radius: 5px;
-  position: relative;
   box-shadow: 2px 2px 4px gray;
+  height: 70vh;
+  margin: 64px auto;
+  position: relative;
+  width: 85%;
 }
 
 .reservation-card__content {
