--- a/src/public/css/review_create.css
+++ b/src/public/css/review_create.css
@@ -11,7 +11,7 @@
 
 /* 左カラム (予約内容) */
 .review-left {
-    width: 30%;
+    width: 40%;
     margin-left: 50px;
     background-color: #f8f8f8;
     padding: 20px;
@@ -25,7 +25,7 @@
 }
 
 .review-left img {
-    width: 80%;
+    width: 85%;
     height: auto;
     border-radius: 8px;
 }
@@ -37,7 +37,7 @@
 
 /* 右カラム (口コミフォーム) */
 .review-right {
-    width: 50%;
+    width: 60%;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -90,8 +90,10 @@
 .review-right form select,
 .review-right form textarea,
 .review-right form input[type="file"] {
-    width: 150%;
-    height: 120%;
+    /* width: 150%; */
+    width: 100%;
+    /* height: 120%; */
+    height: 10%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -143,6 +145,7 @@
     margin-top: 20px;
     font-size: 30px;
 }
+
 
 /* レスポンシブ対応 */
 @media (max-width: 768px) {
